--- a/EDA.Rmd
+++ b/EDA.Rmd
@@ -135,6 +135,7 @@ ggplot(norm_rating_mean, aes(x=rating)) +
   geom_vline(aes(xintercept=mean(rating)),
             color="blue", linetype="dashed", size=1)
 ```
+Bei beiden Methoden werden die Ratings zentiert, also das der Durchschnitt 0 wird. Bei der Normierung "Z-Score" wird noch zusätzlich durch die Standardabweichung geteilt, damit die Verteilung dann einen Durchschnitt von 0 hat und eine Standardabweichung von 0 hat.
 ```{r}
 # 5.Welchen Einfluss hat die Normierung der Ratings pro Kunde auf deren Verteilung?
 MovieLense
@@ -146,4 +147,6 @@ norm_rating_mean
 # 6.Welche strukturellen Charakteristika (z.B. Sparsity) und Auffälligkeiten zeigt die User-Item Matrix?
 image(MovieLense)
 ```
-Gewisse 
+Man sieht, dass es klare Muster gibt: z.B. gibt es Filme, welche sehr selten gerated wurden (vertikale, weisse Linie) und User, welche sehr selten raten (horizontale, weisse Linie).
+Zusätzlich gibt es "oben rechts" sehr viel "nichts". Es scheint aber so, als entsteht dies durch die Funktion "image" von recommenderlab. Leider gibt es wenig Doku da drüber um zu erfahren, warum das entsteht. Es scheint einfach nach etwas bestimmten sortiert zu sein.
+
