Fixed some typos.

--- a/Final_Recommender.Rmd
+++ b/Final_Recommender.Rmd
@@ -27,7 +27,7 @@ ml10 <- MovieLense[c(1:5),c(1:5)]
 as(ml10, "matrix")
 ```
 ```{r}
-# Create subsample to make the EDA run faster.
+# Create subsample to make the EDA run faster. Uncomment to activate!
 # MovieLenseSample <- sample(x=MovieLense, size=500)
 MovieLenseSample <- as(MovieLense, 'data.frame') 
 MovieLenseSample <- MovieLenseSample %>% rename(title = item)
@@ -47,6 +47,8 @@ MostWatchedGenres <- inner_join(MostWatchedMovies, Movie_Genre) %>%
   count(genre, sort=TRUE)
 MostWatchedGenres
 ```
+***Beschreibung***
+Dramas werden am meisten bewertet.
 ```{r}
 # 1.a.Wieviele Filme bewerten User
 MoviesRatedPerUser <- MovieLenseSample %>% count(user, sort=TRUE)
@@ -58,7 +60,8 @@ ggplot(MoviesRatedPerUser, aes(x=n)) +
   geom_histogram(bins=30) +   
   ggtitle("Verteilungen Anzahl Bewertungen pro User. ") 
 ```
-Wir beobachten, dass nur wenige User über 400 Bewertungen abgeben haben. Bei den meisten Usern sind es nur ein paar duzend. Der Durchschnitt liegt etwa bei 100 Bewertungen.
+***Beschreibung***
+Wir beobachten, dass nur wenige User über 400 Bewertungen abgeben haben. Bei den meisten Usern sind es nur ein paar duzend und der Durchschnitt liegt etwa bei 100 Bewertungen.
 
 ```{r}
 # 1.b. Anzahl Bewertungen pro Film
@@ -70,7 +73,8 @@ ggplot(MoviesRatedPertitle, aes(x=n)) +
   geom_histogram(bins=30) +   
   ggtitle("Verteilungen Anzahl Bewertungen pro Film. ") 
 ```
-Wir sehen hier eine ähnliche Verteilung. Es gibt ca. 100 Filme mit sehr vielen Bewertungen (50+), aber die meisten Filme haben nicht so viele Bewertungen.
+***Beschreibung***
+Wir sehen hier eine ähnliche Verteilung; es gibt ca. 100 Filme mit sehr vielen Bewertungen (50+), aber die meisten Filme haben nicht so viele Bewertungen.
 
 ```{r}
 # 2.Wie verteilen sich die Kundenratings gesamthaft und nach Genres?
@@ -93,7 +97,8 @@ MovieLenseSample_genre_mean <- MovieLenseSample_genre %>%
 
 MovieLenseSample_genre_mean
 ```
-Das Muster der Bewertungen unterschiedliche Genres ist sehr ähnlich. Die meisten Bewertungen liegen zwischen 3 und 4. Zudem gibt es starke Schwankungen bei der Anzahl der Bewertungen der jeweiligen Genres. Dies macht es schwieriger sie grafisch zu vergleichen.
+***Beschreibung***
+Das Muster der Bewertungen von unterschiedlichen Genres ist sehr ähnlich. Die meisten Bewertungen liegen zwischen 3 und 4. Zudem gibt es starke Schwankungen bei der Anzahl der Bewertungen der jeweiligen Genres. Dies macht es schwieriger sie grafisch zu vergleichen.
 
 
 ```{r}
@@ -132,7 +137,8 @@ ggplot(rating_std, aes(x=std)) +
             color="blue", linetype="dashed", size=1)
 summary(rating_std)
 ```
-Eine Normalverteilung bei der Streuung des Ratings der individuellen Kunden.
+***Beschreibung***
+Eine Normalverteilung bei der Streuung des Ratings der individuellen Kunden. Auf der X-Achse sehen wir den Wert der Standardabweichung und auf der Y-Achse die Anzahl von Standardabweichungen, welche in den spezifischen Bin fallen. Somit sehen wir, dass die Streuung von inviduellen Kunden am meisten mit einer Standardabweichung von 1 streuuen.
 
 ```{r}
 summary(rating_std)
@@ -156,20 +162,22 @@ ggplot(norm_rating_mean, aes(x=rating)) +
   geom_vline(aes(xintercept=mean(rating)),
             color="blue", linetype="dashed", size=1)
 ```
-Bei beiden Methoden werden die Ratings zentiert, also das der Durchschnitt 0 wird. Bei der Normierung "Z-Score" wird noch zusätzlich durch die Standardabweichung geteilt, damit die Verteilung dann einen Durchschnitt von 0 hat und eine Standardabweichung von 0 hat.
 ```{r}
-# 5.Welchen Einfluss hat die Normierung der Ratings pro Kunde auf deren Verteilung?
 MovieLense
 norm_rating_mean <- recommenderlab::normalize(MovieLense) 
 norm_rating_mean <- as(norm_rating_mean, 'data.frame') 
 norm_rating_mean
 ```
+***Beschreibung***
+Bei beiden Methoden werden die Ratings zentiert, also das der Durchschnitt 0 wird. Bei der Normierung "Z-Score" wird noch zusätzlich durch die Standardabweichung geteilt, damit die Verteilung dann einen Durchschnitt von 0 hat und eine Standardabweichung von 1 hat.
+
 ```{r}
 # 6.Welche strukturellen Charakteristika (z.B. Sparsity) und Auffälligkeiten zeigt die User-Item Matrix?
 image(MovieLense)
 ```
 
-Man sieht, dass es klare Muster gibt: z.B. gibt es Filme, welche sehr selten gerated wurden (vertikale, weisse Linie) und User, welche sehr selten raten (horizontale, weisse Linie).
+***Beschreibung***
+Man sieht klare Muster: z.B. gibt es Filme, welche sehr selten gerated wurden (vertikale, weisse Linie) und User, welche sehr selten raten (horizontale, weisse Linie).
 Zusätzlich gibt es "oben rechts" sehr viel "nichts". Es scheint aber so, als entsteht dies durch die Funktion "image" von recommenderlab. Leider gibt es wenig Doku da drüber um zu erfahren, warum das entsteht. Es scheint einfach nach etwas bestimmten sortiert zu sein.
 
 ----------------
@@ -258,6 +266,7 @@ image(MovieLense_random_user_top_movie_norm[1:plot_rows, 1:plot_rows], main = "N
 
 ```
 **Beschreibung:**
+
 
 ```{r}
 calc_sparsity <- function(RRM){
