--- a/Final_Recommender.Rmd
+++ b/Final_Recommender.Rmd
@@ -47,7 +47,7 @@ MostWatchedGenres <- inner_join(MostWatchedMovies, Movie_Genre) %>%
   count(genre, sort=TRUE)
 MostWatchedGenres
 ```
-***Beschreibung***
+**Beschreibung**
 Dramas werden am meisten bewertet.
 ```{r}
 # 1.a.Wieviele Filme bewerten User
@@ -60,7 +60,7 @@ ggplot(MoviesRatedPerUser, aes(x=n)) +
   geom_histogram(bins=30) +   
   ggtitle("Verteilungen Anzahl Bewertungen pro User. ") 
 ```
-***Beschreibung***
+**Beschreibung**
 Wir beobachten, dass nur wenige User über 400 Bewertungen abgeben haben. Bei den meisten Usern sind es nur ein paar duzend und der Durchschnitt liegt etwa bei 100 Bewertungen.
 
 ```{r}
@@ -73,7 +73,7 @@ ggplot(MoviesRatedPertitle, aes(x=n)) +
   geom_histogram(bins=30) +   
   ggtitle("Verteilungen Anzahl Bewertungen pro Film. ") 
 ```
-***Beschreibung***
+**Beschreibung**
 Wir sehen hier eine ähnliche Verteilung; es gibt ca. 100 Filme mit sehr vielen Bewertungen (50+), aber die meisten Filme haben nicht so viele Bewertungen.
 
 ```{r}
@@ -97,7 +97,7 @@ MovieLenseSample_genre_mean <- MovieLenseSample_genre %>%
 
 MovieLenseSample_genre_mean
 ```
-***Beschreibung***
+**Beschreibung**
 Das Muster der Bewertungen von unterschiedlichen Genres ist sehr ähnlich. Die meisten Bewertungen liegen zwischen 3 und 4. Zudem gibt es starke Schwankungen bei der Anzahl der Bewertungen der jeweiligen Genres. Dies macht es schwieriger sie grafisch zu vergleichen.
 
 
@@ -137,7 +137,7 @@ ggplot(rating_std, aes(x=std)) +
             color="blue", linetype="dashed", size=1)
 summary(rating_std)
 ```
-***Beschreibung***
+**Beschreibung**
 Eine Normalverteilung bei der Streuung des Ratings der individuellen Kunden. Auf der X-Achse sehen wir den Wert der Standardabweichung und auf der Y-Achse die Anzahl von Standardabweichungen, welche in den spezifischen Bin fallen. Somit sehen wir, dass die Streuung von inviduellen Kunden am meisten mit einer Standardabweichung von 1 streuuen.
 
 ```{r}
@@ -168,7 +168,7 @@ norm_rating_mean <- recommenderlab::normalize(MovieLense)
 norm_rating_mean <- as(norm_rating_mean, 'data.frame') 
 norm_rating_mean
 ```
-***Beschreibung***
+**Beschreibung**
 Bei beiden Methoden werden die Ratings zentiert, also das der Durchschnitt 0 wird. Bei der Normierung "Z-Score" wird noch zusätzlich durch die Standardabweichung geteilt, damit die Verteilung dann einen Durchschnitt von 0 hat und eine Standardabweichung von 1 hat.
 
 ```{r}
@@ -176,7 +176,7 @@ Bei beiden Methoden werden die Ratings zentiert, also das der Durchschnitt 0 wir
 image(MovieLense)
 ```
 
-***Beschreibung***
+**Beschreibung**
 Man sieht klare Muster: z.B. gibt es Filme, welche sehr selten gerated wurden (vertikale, weisse Linie) und User, welche sehr selten raten (horizontale, weisse Linie).
 Zusätzlich gibt es "oben rechts" sehr viel "nichts". Es scheint aber so, als entsteht dies durch die Funktion "image" von recommenderlab. Leider gibt es wenig Doku da drüber um zu erfahren, warum das entsteht. Es scheint einfach nach etwas bestimmten sortiert zu sein.
 
@@ -262,11 +262,9 @@ image(MovieLense_norm[1:plot_rows, 1:plot_rows], main = "Normalized Ratings Snip
 image(MovieLense_reduced_norm[1:plot_rows, 1:plot_rows], main = "Normalized Ratings Snippet: Reduced")
 image(MovieLense_random_norm[1:plot_rows, 1:plot_rows], main = "Normalized Ratings Snippet: Random")
 image(MovieLense_random_user_top_movie_norm[1:plot_rows, 1:plot_rows], main = "Normalized Ratings Snippet: Random User, Top Movies")
-
-
 ```
 **Beschreibung:**
-
+Wir sehen, dass die Sparsity bei der Random-selection ca. gleich bleibt. Dagegen ist, wenn man Filme und User mit wenig Bewertungen weglässt, ist die Sparsity voller.
 
 ```{r}
 calc_sparsity <- function(RRM){
